[FIX] website_pfoh prevetn top nav to overlapp the logo if a user is logged in and a shopping cart item is present

--- a/addons/website_pfoh/static/src/css/website_less.less
+++ b/addons/website_pfoh/static/src/css/website_less.less
@@ -55,6 +55,12 @@
 //@headings: h1,h2,h3,h4,h5;
 @iterations: 5;
 
+// Prevent top navigation menu to overlap the logo on the left side
+header ul.navbar-right {
+  margin-left: 100px;
+}
+
+
 div.js_product .label { font-size: 58%; }
 
 .navbar .nav {
